--- a/greatest-node-application-ever/package.json
+++ b/greatest-node-application-ever/package.json
@@ -24,6 +24,11 @@
     "dompurify": "0.8.5",
     "dotenv": "4.0.0",
     "es6-promisify": "5.0.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "express": "4.15.2",
     "express-session": "1.15.1",
     "express-validator": "3.1.2",
