--- a/greatest-node-application-ever/.eslintrc
+++ b/greatest-node-application-ever/.eslintrc
@@ -10,6 +10,7 @@
     "array-bracket-spacing": ["error", "always"],
     "quotes": ["error", "single"],
     "arrow-parens": ["error", "as-needed"],
+    "newline-per-chained-call": ["error", { "ignoreChainWithDepth": 2 }],
     "max-len": [
       "error",
       {
