--- a/greatest-node-application-ever/package.json
+++ b/greatest-node-application-ever/package.json
@@ -31,13 +31,14 @@
     "eslint-plugin-react": "^7.7.0",
     "express": "4.15.2",
     "express-session": "1.15.1",
-    "express-validator": "3.1.2",
+    "express-validator": "^5.1.2",
     "faker": "4.1.0",
     "forever": "0.15.3",
     "glob": "7.1.1",
     "html-to-text": "3.2.0",
     "jimp": "0.2.27",
     "juice": "4.0.2",
+    "lodash": "^4.17.10",
     "md5": "2.2.1",
     "moment": "2.17.1",
     "mongoose": "^5.0.16",
